objects/Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <description>Formula field to display anthem entity type from case&apos;s associated account</description>
        <formula>TEXT(Case__r.Account.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_JSON_Response__c</fullName>
        <description>This field is used to store the entire JSON message from NLP.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit JSON Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Field to associate benefits record to an associated case.</description>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only an &apos;RFP Intake Case&apos; can be associated to this record</errorMessage>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>RFP Intake Case</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Ins_Emergency_Room_INN__c</fullName>
        <description>This is a percentage,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance Emergency Room(%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Ins_Primary_Care_Provider_OON__c</fullName>
        <description>This is a percentage</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance Primary Care Provider(%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Ins_Specialty_Care_Provider_OON__c</fullName>
        <description>This is a percentage,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance Specialty Provider(%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Pay_Emergency_Room_INN__c</fullName>
        <description>This is a dollar amount.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Emergency Room($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Pay_Primary_Care_Provider_INN__c</fullName>
        <description>This is a dollar amount.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Primary Care Provider($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Pay_Specialty_Care_Provider_INN__c</fullName>
        <description>This is a dollar amount.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Specialty Provider($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Pay_Urgent_Care_INN__c</fullName>
        <description>This is a dollar amount.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Urgent Care($)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_ins_Urgent_Care_OON__c</fullName>
        <description>This is a percentage,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OON Coinsurance Urgent Care(%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Competitor Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible_Accumulation_Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deductible Accumulation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>INN_Bifocal_Lens__c</fullName>
        <description>This is a dollar amount</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Bifocal Lens($)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Contact_Lens_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Contact Lens Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Elective_Contact_Lens__c</fullName>
        <description>This is a dollar amount</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Elective Contact Lens($)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Exam_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Exam Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Exam__c</fullName>
        <description>This is a dollar amount</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Exam($)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Frame_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Frame Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Frames__c</fullName>
        <description>This is a dollar amount for frames</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Frames($)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Lens_Frequency__c</fullName>
        <description>This is text for time period</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Lens Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Non_Elective_Contact_Lens__c</fullName>
        <description>This is a dollar amount</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Non-Elective Contact Lens($)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Single_Vision_Lens__c</fullName>
        <description>This is a dollar amount</description>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Single Vision Lens($)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Trifocal_Lens__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Trifocal Lens($)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Network_Coinsurance__c</fullName>
        <description>This is a percentage</description>
        <label>INN Coinsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Network_Deductible_Family__c</fullName>
        <description>This is a dollar amount.</description>
        <label>INN Deductible Family</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Network_Deductible_Single__c</fullName>
        <description>This is a dollar amount.</description>
        <label>INN Deductible Single</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Network_Out_of_Pocket_Max_Family__c</fullName>
        <description>This is a dollar amount.</description>
        <label>INN Out of Pocket Max Family</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Network_Out_of_Pocket_Max_Single__c</fullName>
        <description>This is a dollar amount.</description>
        <label>INN Out of Pocket Max Single</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Branding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Branding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Out_of_Pocket_Max_Family__c</fullName>
        <description>This is a dollar amount for out of pocket max</description>
        <label>OON Out of Pocket Max Family</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Out_of_Pocket_Max_Single__c</fullName>
        <description>This is a dollar amount for out of pocket max single</description>
        <label>OON Out of Pocket Max Single</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Out_of_Network_Coinsurance__c</fullName>
        <description>This is a percentage.</description>
        <label>OON Coinsurance</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Out_of_Network_Deductible_Family__c</fullName>
        <description>This is a dollar amount.</description>
        <label>OON Deductible Family</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Out_of_Network_Deductible_Single__c</fullName>
        <description>This is a dollar amount.</description>
        <label>OON Deductible Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Used to capture product family</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spider_Network_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spider Network Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4th_Quarter_Deductible_Carryover__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>4th Quarter Deductible Carryover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Benefit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <recordTypes>
        <fullName>Medical</fullName>
        <active>true</active>
        <label>Medical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vision</fullName>
        <active>true</active>
        <label>Vision</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>INN_Bifocal_Lens_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK( INN_Bifocal_Lens__c ) ), OR(
ISCHANGED( INN_Bifocal_Lens__c ), ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( INN_Bifocal_Lens__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(INN_Bifocal_Lens__c))
),
NOT(REGEX( INN_Bifocal_Lens__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(INN_Bifocal_Lens__c), VALUE(INN_Bifocal_Lens__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>INN_Bifocal_Lens__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Coinsurance_Emergency_Room_Percent</fullName>
        <active>true</active>
        <description>Only percentage, Not Covered, NA allowed</description>
        <errorConditionFormula>AND(NOT ( ISBLANK(Co_Ins_Emergency_Room_INN__c) ), OR(ISCHANGED(  Co_Ins_Emergency_Room_INN__c  ),ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;, UPPER(Co_Ins_Emergency_Room_INN__c ))),
NOT(
CONTAINS(&quot;NOT COVERED&quot;, UPPER(Co_Ins_Emergency_Room_INN__c ))),
NOT(
AND(ISNUMBER( Co_Ins_Emergency_Room_INN__c ),
VALUE(Co_Ins_Emergency_Room_INN__c) &gt;=0,
VALUE(Co_Ins_Emergency_Room_INN__c )&lt;=100)
)
)</errorConditionFormula>
        <errorDisplayField>Co_Ins_Emergency_Room_INN__c</errorDisplayField>
        <errorMessage>Only Percentage, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed. Value must be between 0-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Copay_Primay_Care_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(Co_Pay_Primary_Care_Provider_INN__c ) ), OR(
ISCHANGED( Co_Pay_Primary_Care_Provider_INN__c ), ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( Co_Pay_Primary_Care_Provider_INN__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(Co_Pay_Primary_Care_Provider_INN__c))
),
NOT(REGEX( Co_Pay_Primary_Care_Provider_INN__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(Co_Pay_Primary_Care_Provider_INN__c), VALUE(Co_Pay_Primary_Care_Provider_INN__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>Co_Pay_Primary_Care_Provider_INN__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Elective_Contact_Lens_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK( INN_Elective_Contact_Lens__c ) ), OR(
ISCHANGED( INN_Elective_Contact_Lens__c ), ISNEW()), 
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( INN_Elective_Contact_Lens__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(INN_Elective_Contact_Lens__c))
),
NOT(REGEX( INN_Elective_Contact_Lens__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(INN_Elective_Contact_Lens__c), VALUE(INN_Elective_Contact_Lens__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>INN_Elective_Contact_Lens__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Emergency_Room_Dollar_Values</fullName>
        <active>true</active>
        <description>Only numbers, N/A or not covered allowed</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(Co_Pay_Emergency_Room_INN__c ) ), OR(
ISCHANGED( Co_Pay_Emergency_Room_INN__c ),ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( Co_Pay_Emergency_Room_INN__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(Co_Pay_Emergency_Room_INN__c))
),
NOT(REGEX( Co_Pay_Emergency_Room_INN__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(Co_Pay_Emergency_Room_INN__c), VALUE(Co_Pay_Emergency_Room_INN__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>Co_Pay_Emergency_Room_INN__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Exam_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK( INN_Exam__c  ) ), OR(
ISCHANGED( INN_Exam__c ), ISNEW()), 
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( INN_Exam__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(INN_Exam__c))
),
NOT(REGEX( INN_Exam__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(INN_Exam__c), VALUE(INN_Exam__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>INN_Exam__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Frames_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(INN_Frames__c) ), OR(
ISCHANGED(INN_Frames__c), ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;,UPPER(INN_Frames__c))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(INN_Frames__c))
),
NOT(REGEX( INN_Frames__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(INN_Frames__c), VALUE(INN_Frames__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>INN_Frames__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Non_Elective_Contacts_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(  INN_Non_Elective_Contact_Lens__c  ) ), OR(
ISCHANGED( INN_Non_Elective_Contact_Lens__c ), ISNEW()), 
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( INN_Non_Elective_Contact_Lens__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(INN_Non_Elective_Contact_Lens__c))
),
NOT(REGEX( INN_Non_Elective_Contact_Lens__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(INN_Non_Elective_Contact_Lens__c), VALUE(INN_Non_Elective_Contact_Lens__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>INN_Non_Elective_Contact_Lens__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Single_Vision_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(  INN_Single_Vision_Lens__c   ) ), OR(
ISCHANGED( INN_Single_Vision_Lens__c ), ISNEW()), 
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( INN_Single_Vision_Lens__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(INN_Single_Vision_Lens__c))
),
NOT(REGEX( INN_Single_Vision_Lens__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(INN_Single_Vision_Lens__c), VALUE(INN_Single_Vision_Lens__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>INN_Single_Vision_Lens__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Trifocal_Lens_Dollar_Values</fullName>
        <active>true</active>
        <description>Ensure value is number, Not Covered, N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(  INN_Trifocal_Lens__c  ) ), OR(
ISCHANGED( INN_Trifocal_Lens__c ), ISNEW()), 
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( INN_Trifocal_Lens__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(INN_Trifocal_Lens__c))
),
NOT(REGEX( INN_Trifocal_Lens__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(INN_Trifocal_Lens__c), VALUE(INN_Trifocal_Lens__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>INN_Trifocal_Lens__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_Urgent_Care_Dollar_Value</fullName>
        <active>true</active>
        <description>Only numbers,N/A or Not Covered allowed</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(Co_Pay_Urgent_Care_INN__c ) ), OR(
ISCHANGED( Co_Pay_Urgent_Care_INN__c ),ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;,UPPER( Co_Pay_Urgent_Care_INN__c ))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(Co_Pay_Urgent_Care_INN__c))
),
NOT(REGEX( Co_Pay_Urgent_Care_INN__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(Co_Pay_Urgent_Care_INN__c), VALUE(Co_Pay_Urgent_Care_INN__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>Co_Pay_Urgent_Care_INN__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_coinsurance_percent_range</fullName>
        <active>true</active>
        <description>Range of values for INN Coinsurance</description>
        <errorConditionFormula>AND(NOT ( ISBLANK(In_Network_Coinsurance__c) ), OR(ISCHANGED(   In_Network_Coinsurance__c   ),ISNEW()),
NOT(AND(In_Network_Coinsurance__c &gt;= 0.00 , In_Network_Coinsurance__c &lt;= 1.00)))</errorConditionFormula>
        <errorDisplayField>In_Network_Coinsurance__c</errorDisplayField>
        <errorMessage>Percentage must be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INN_copay_specialty_care_provider_dollar</fullName>
        <active>true</active>
        <description>Ensure value is a dollar amount or N/A</description>
        <errorConditionFormula>OR(AND(NOT ( ISBLANK(Co_Pay_Specialty_Care_Provider_INN__c  ) ), OR(
ISCHANGED(  Co_Pay_Specialty_Care_Provider_INN__c  ), ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;,UPPER(Co_Pay_Specialty_Care_Provider_INN__c))
),
NOT(
CONTAINS(&quot;NOT COVERED&quot; ,UPPER(Co_Pay_Specialty_Care_Provider_INN__c))
),
NOT(REGEX( Co_Pay_Specialty_Care_Provider_INN__c ,&quot;^[-]?([1-9]{1}[0-9]{0,}(\\.[0-9]{0,2})?|0(\\.[0-9]{0,2})?|\\.[0-9]{1,2})$&quot; ))
),
AND(ISNUMBER(Co_Pay_Specialty_Care_Provider_INN__c), VALUE(Co_Pay_Specialty_Care_Provider_INN__c) &lt; 0)
)</errorConditionFormula>
        <errorDisplayField>Co_Pay_Specialty_Care_Provider_INN__c</errorDisplayField>
        <errorMessage>Only Numbers, &quot;Not Covered&quot;  or &quot;N/A&quot; are Allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OON_CoInsure_Primary_Care_Percent</fullName>
        <active>true</active>
        <description>Ensure field is a percentage</description>
        <errorConditionFormula>AND(NOT ( ISBLANK(Co_Ins_Primary_Care_Provider_OON__c  ) ), OR(
ISCHANGED(  Co_Ins_Primary_Care_Provider_OON__c  ),ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;, UPPER(Co_Ins_Primary_Care_Provider_OON__c ))),
NOT(
CONTAINS(&quot;NOT COVERED&quot;, UPPER(Co_Ins_Primary_Care_Provider_OON__c ))),
NOT(
AND(ISNUMBER( Co_Ins_Primary_Care_Provider_OON__c ),
VALUE(Co_Ins_Primary_Care_Provider_OON__c) &gt;=0,
VALUE(Co_Ins_Primary_Care_Provider_OON__c )&lt;=100)
)
)</errorConditionFormula>
        <errorDisplayField>Co_Ins_Primary_Care_Provider_OON__c</errorDisplayField>
        <errorMessage>Only Percentage, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed. Value must be between 0-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OON_Coinsurance_Specialty_Care_Percent</fullName>
        <active>true</active>
        <description>Ensure value is &quot;N/A&quot;, Not Covered, or a number between 0 and 100</description>
        <errorConditionFormula>AND(NOT ( ISBLANK(Co_Ins_Specialty_Care_Provider_OON__c  ) ), OR(
ISCHANGED(  Co_Ins_Specialty_Care_Provider_OON__c  ),ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;, UPPER(Co_Ins_Specialty_Care_Provider_OON__c ))),
NOT(
CONTAINS(&quot;NOT COVERED&quot;, UPPER(Co_Ins_Specialty_Care_Provider_OON__c ))),
NOT(
AND(ISNUMBER( Co_Ins_Specialty_Care_Provider_OON__c ),
VALUE(Co_Ins_Specialty_Care_Provider_OON__c) &gt;=0,
VALUE(Co_Ins_Specialty_Care_Provider_OON__c )&lt;=100)
)
)</errorConditionFormula>
        <errorDisplayField>Co_Ins_Specialty_Care_Provider_OON__c</errorDisplayField>
        <errorMessage>Only Percentage, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed. Value must be between 0-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OON_Coinsurance_percent_values</fullName>
        <active>true</active>
        <description>Make sure OON Coinsurance value is between 0-100</description>
        <errorConditionFormula>AND(NOT ( ISBLANK(Out_of_Network_Coinsurance__c  ) ), OR(ISCHANGED(  Out_of_Network_Coinsurance__c  ),ISNEW()),
NOT(AND(Out_of_Network_Coinsurance__c &gt;= 0.00 , Out_of_Network_Coinsurance__c &lt;= 1.00)))</errorConditionFormula>
        <errorDisplayField>Out_of_Network_Coinsurance__c</errorDisplayField>
        <errorMessage>Percentage must be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OON_Urgent_Care_Percentage</fullName>
        <active>true</active>
        <description>Only numbers, N/A and Not Covered allowed.</description>
        <errorConditionFormula>AND(NOT ( ISBLANK(Co_ins_Urgent_Care_OON__c  ) ), OR(
ISCHANGED(  Co_ins_Urgent_Care_OON__c  ),ISNEW()),
NOT(
CONTAINS(&quot;N/A&quot;, UPPER(Co_ins_Urgent_Care_OON__c ))),
NOT(
CONTAINS(&quot;NOT COVERED&quot;, UPPER(Co_ins_Urgent_Care_OON__c ))),
NOT(
AND(ISNUMBER( Co_ins_Urgent_Care_OON__c ),
VALUE(Co_ins_Urgent_Care_OON__c) &gt;=0,
VALUE(Co_ins_Urgent_Care_OON__c )&lt;=100)
)
)</errorConditionFormula>
        <errorDisplayField>Co_ins_Urgent_Care_OON__c</errorDisplayField>
        <errorMessage>Only Percentage, &quot;Not Covered&quot; or &quot;N/A&quot; are allowed. Value must be between 0-100</errorMessage>
    </validationRules>
</CustomObject>